--- a/.env
+++ b/.env
@@ -1,4 +1,11 @@
-MONGO_URI=mongodb://mongodb:27017/identityDB
-REDIS_URI=redis://redis:6379
+MONGO_URI=mongodb://localhost:27017/identityDB
+REDIS_URL=localhost:6379
 JWT_SECRET=your_jwt_secret
+JWT_EXPIRE=15m
+JWT_REFRESH=7d
 REFRESH_SECRET=your_refresh_secret
+PORT=5000
+JWT_REFRESH_EXPIRE=604800
+SESSION_SECRET=session_secret
+GOOGLE_CLIENT_ID=clientId
+GOOGLE_CLIENT_SECRET=client_secret
